[workspace]
members = ["benchmark"]

[package]
name = "loole"
version = "0.1.11"
edition = "2021"
authors = ["Mahdi Shojaee <msh6180339@gmail.com>"]
description = "A safe async/sync multi-producer, multi-consumer channel"
repository = "https://github.com/mahdi-shojaee/loole"
documentation = "https://docs.rs/loole"
keywords = ["async", "thread", "channel", "mpmc", "mpsc"]
categories = ["concurrency", "data-structures"]
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = ["/.*"]

[dev-dependencies]
tokio = { version = "1.31.0", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
futures = { version = "^0.3", features = ["std"] }
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.16"
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "criterion_benchmarks"
harness = false
