[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
loole = { path = ".." }
async-channel = "2.1.1"
flume = "0.11.0"
kanal = { version = "0.1.1", features = ["std-mutex"] }
crossbeam-channel = "0.5.15"
tokio = { version = "1.44.2", features = ["full"] }
num-format = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
